src/objects/ensxapp__SAP_Pricing_Condition_Field__mdt.object
<CustomObject>
    <description>Mappings between Salesforce objects and SAP Condition fields</description>
    <fields>
        <fullName>ensxapp__Input__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not this field is intended as an input value for pricing calculations</description>
        <inlineHelpText>Determines whether or not this field is intended as an input value for pricing calculations</inlineHelpText>
        <label>Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__Output__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not this field is meant to contain data returned from pricing calculations</description>
        <inlineHelpText>Determines whether or not this field is meant to contain data returned from pricing calculations</inlineHelpText>
        <label>Output</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Field__c</fullName>
        <description>SAP Field that maps onto this Salesforce field</description>
        <label>SAP Field</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ConditionPricingUnit</fullName>
                    <label>Condition Pricing Unit</label>
                </value>
                <value>
                    <fullName>ConditionUnit</fullName>
                    <label>Condition Unit</label>
                </value>
                <value>
                    <fullName>ConditionValue</fullName>
                    <label>Condition Value</label>
                </value>
                <value>
                    <fullName>Rate</fullName>
                </value>
                <value>
                    <fullName>RateUnit</fullName>
                    <label>Rate Unit</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ensxapp__SAP_Pricing_Condition__c</fullName>
        <description>Pricing condition for which this is the individual field information.</description>
        <label>SAP Pricing Condition</label>
        <referenceTo>ensxapp__SAP_Pricing_Condition__mdt</referenceTo>
        <relationshipLabel>SAP Pricing Condition Fields</relationshipLabel>
        <relationshipName>SAP_Pricing_Condition_Fields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Salesforce_Field__c</fullName>
        <description>Field on the Salesforce object to which this SAP field maps</description>
        <label>Salesforce Field</label>
        <metadataRelationshipControllingField>ensxapp__SAP_Pricing_Condition_Field__mdt.ensxapp__Salesforce_Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>SAP_Conditions</relationshipLabel>
        <relationshipName>SAP_Conditions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Salesforce_Object__c</fullName>
        <description>Salesforce object unto which this condition field maps</description>
        <inlineHelpText>This should be either Opportunity or Opportunity Product</inlineHelpText>
        <label>Salesforce Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>SAP_Conditions</relationshipLabel>
        <relationshipName>SAP_Conditions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>ensxapp__Value__c</fullName>
        <description>Used for mapping a static value to an SAP field.</description>
        <inlineHelpText>This will *always* override any fields that may be mapped.</inlineHelpText>
        <label>Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>SAP Pricing Condition Field</label>
    <pluralLabel>SAP Pricing Condition Fields</pluralLabel>
    <validationRules>
        <fullName>ensxapp__Condition_Value_Cannot_Be_Input</fullName>
        <active>true</active>
        <description>SAP Condition Value Fields are &quot;Output&quot; only.</description>
        <errorConditionFormula>(AND(ensxapp__Input__c)) &amp;&amp; (ISPICKVAL(ensxapp__SAP_Field__c, &apos;ConditionValue&apos;))</errorConditionFormula>
        <errorMessage>SAP Condition Value Fields are &quot;Output&quot; only; please de-select the &quot;Input&quot; box, and select &quot;Output&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ensxapp__Must_Be_An_Input_Output_or_Both</fullName>
        <active>true</active>
        <description>The field must be an input field, an output field, or both</description>
        <errorConditionFormula>(NOT(ensxapp__Input__c)) &amp;&amp; (NOT(ensxapp__Output__c))</errorConditionFormula>
        <errorMessage>The field must be an input field, an output field, or both</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ensxapp__No_Input_Field_If_Condition_Not_Input</fullName>
        <active>true</active>
        <description>The field cannot be an input field if the condition it&apos;s mapped to does not support input</description>
        <errorConditionFormula>(AND(ensxapp__Input__c)) &amp;&amp;   (NOT(ensxapp__SAP_Pricing_Condition__r.ensxapp__Input_Condition__c))</errorConditionFormula>
        <errorMessage>The field cannot be an input field if the condition it&apos;s mapped to does not support an input value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ensxapp__No_Output_Field_If_Condition_Not_Output</fullName>
        <active>true</active>
        <description>The field cannot be an output field if the condition it&apos;s mapped to does not support output</description>
        <errorConditionFormula>(AND(ensxapp__Output__c)) &amp;&amp;   (NOT(ensxapp__SAP_Pricing_Condition__r.ensxapp__Output_Condition__c))</errorConditionFormula>
        <errorMessage>The field cannot be an output field if the condition it&apos;s mapped to does not support an output value.</errorMessage>
    </validationRules>
</CustomObject>